--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,3 +124,10 @@ footer {
              line-height: 75px;
              margin: 0 0.5rem;
          }
+
+         /* Main content */
+        main {
+             /* Push main content down to accommodate larger header */
+              margin-top: 79px;
+             }
+             }
