--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,10 +91,19 @@ main {
 }
 
 /* Footer */
-footer {
-    background-color: orange;
+footer #social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
 }
 
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
+}
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
@@ -107,34 +116,34 @@ footer {
         padding-right: 1rem;
     }
 
-         #menu {
-             display: flex;
-         }
-    
-         #menu> li {
-             padding-left: 1rem;
-         }
-    
-         .nav-toggle-label {
-             display: none;
-         }
-    
-         #logo {
-             font-size: 280%;
-             line-height: 75px;
-             margin: 0 0.5rem;
-         }
+    #menu {
+        display: flex;
+    }
 
-         /* Main content */
-        main {
-             /* Push main content down to accommodate larger header */
-              margin-top: 79px;
-             }
-        }
+    #menu>li {
+        padding-left: 1rem;
+    }
 
-                /* Large devices (laptops and desktops, 992px and up) */
-                @media screen and (min-width: 992px) {
-                    #menu a:hover {
-                        border-bottom: 1px solid #3a3a3a;
-                    }
-                }
+    .nav-toggle-label {
+        display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
+}
