--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu>li {
+#menu> li {
     margin-bottom: 1em;
 }
 
@@ -109,6 +109,33 @@ main {
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
+}
+
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-physical>div,
+#benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
 }
 
 #cover-text > h2, #cover-text > h3 {
