--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -51,7 +53,7 @@ header a {
     list-style-type: none;
 }
 
-#menu> li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -111,96 +113,115 @@ main {
     padding-left: 10px;
 }
 
-/* Reasons section */
-#reasons {
-    width: 90%;
-    margin: 20px auto;
-}
-
-#reasons h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280%;
-}
-
-#benefits-physical>div,
-#benefits-mental>div {
-    line-height: 20px;
-    margin-bottom: 20px;
-}
-
-#benefits p {
-    padding: 0 20px;
-}
-
-#benefits hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
-}
-
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
-}
-/* Footer */
-footer #social-networks {
-    text-align: center;
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-evenly;
-    list-style-type: none;
-}
 
-#social-networks i {
-    font-size: 160%;
-    padding: 5%;
-    color: #3a3a3a;
-}
-
-/* Media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
-
-    /* Header */
-    nav {
-        display: block;
-        position: relative;
-        box-shadow: none;
-        width: fit-content;
-        padding-right: 1rem;
+    /* Reasons section */
+    #reasons {
+        width: 90%;
+        margin: 20px auto;
     }
 
-    #menu {
-        display: flex;
-    }
-
-    #menu>li {
-        padding-left: 1rem;
-    }
-
-    .nav-toggle-label {
-        display: none;
-    }
-
-    #logo {
+    #reasons h2 {
+        margin-bottom: 20px;
+        text-align: center;
         font-size: 280%;
-        line-height: 75px;
-        margin: 0 0.5rem;
     }
 
-    /* Main content */
-    main {
-        /* Push main content down to accommodate larger header */
-        margin-top: 79px;
+    #benefits-physical>div,
+    #benefits-mental>div {
+        line-height: 20px;
+        margin-bottom: 20px;
     }
-         /* Hero image */
-         #cover-text {
-             width: 300px;
-             right: 50px;
-         }
-}
 
-/* Large devices (laptops and desktops, 992px and up) */
-@media screen and (min-width: 992px) {
-    #menu a:hover {
-        border-bottom: 1px solid #3a3a3a;
+    #benefits p {
+        padding: 0 20px;
     }
-}
+
+    #benefits hr {
+        border-top: 1px solid #3a3a3a;
+        margin: 5px 0;
+    }
+
+    #circle-cover-bg {
+        background: url('../images/reasons-image.webp') no-repeat top center / cover;
+        height: 90vw;
+        width: 90vw;
+        margin-bottom: 20px;
+        /* Makes the square image into a circle */
+        border-radius: 50%;
+        max-width: 300px;
+        max-height: 300px;
+    }
+
+    #benefits-image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Footer */
+    footer #social-networks {
+        text-align: center;
+        padding: 20px 0;
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+    }
+
+    #social-networks i {
+        font-size: 160%;
+        padding: 5%;
+        color: #3a3a3a;
+    }
+
+    /* Media query: tablets and larger (768px and up) */
+    @media screen and (min-width: 768px) {
+
+        /* Header */
+        nav {
+            display: block;
+            position: relative;
+            box-shadow: none;
+            width: fit-content;
+            padding-right: 1rem;
+        }
+
+        #menu {
+            display: flex;
+        }
+
+        #menu>li {
+            padding-left: 1rem;
+        }
+
+        .nav-toggle-label {
+            display: none;
+        }
+
+        #logo {
+            font-size: 280%;
+            line-height: 75px;
+            margin: 0 0.5rem;
+        }
+
+        /* Main content */
+        main {
+            /* Push main content down to accommodate larger header */
+            margin-top: 79px;
+        }
+
+        /* Hero image */
+        #cover-text {
+            width: 300px;
+            right: 50px;
+        }
+    }
+
+    /* Large devices (laptops and desktops, 992px and up) */
+    @media screen and (min-width: 992px) {
+        #menu a:hover {
+            border-bottom: 1px solid #3a3a3a;
+        }
+    }
