--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,13 +215,13 @@ main {
         color: #3a3a3a;
     }
 
-        /* Media query: large or landscape phones (576px and up) */
-        @media screen and (min-width: 576px) {
-            #photos {
-                column-count: 2;
-                column-gap: 0;
-            }
+    /* Media query: large or landscape phones (576px and up) */
+    @media screen and (min-width: 576px) {
+        #photos {
+            column-count: 2;
+            column-gap: 0;
         }
+    }
 
     /* Media query: tablets and larger (768px and up) */
     @media screen and (min-width: 768px) {
@@ -255,73 +255,124 @@ main {
 
         /* Main content */
         main {
-            /* Push main content down to accommodate larger header */
-            margin-top: 79px;
-        }
-
-        /* Hero */
-        #cover-text {
-            width: 300px;
-            right: 50px;
-        }
-
-        /* Reasons section */
-        #benefits-physical,
-        #benefits-mental {
+            /* Enlarge main element to push footer down*/
+            flex: 1 0 auto;
+            /* Add margin at the top to prevent content from being covered by the header */
+            margin-top: 47px;
+            /* Enable flex properties for child elements */
             display: flex;
             flex-direction: column;
+        }
+
+        /* Form */
+        #signup {
+            background-image: url("../images/signup-image.webp");
+            background-size: cover;
+            background-position: 75%;
+            padding: 20px 10% 0 10%;
+            flex-grow: 1;
+        }
+
+        #signup-form {
+            color: #ffffff;
+            background-color: rgba(60, 60, 60, 0.6);
+            padding: 30px;
+        }
+
+        #signup-form>h2 {
+            color: #fafafa;
+            margin-bottom: 20px;
+        }
+
+        .text-input {
+            background: transparent;
+            color: #fafafa;
             width: 100%;
+            height: 25px;
+            margin: 5px 0 20px 0;
+            border: 1px solid #fafafa;
+            border-radius: 2px;
+            padding: 0 5px;
         }
 
-        #benefits-physical>div,
-        #benefits-mental>div {
-            width: 75%;
+        .radio-buttons {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
         }
 
-        #benefits-mental>div {
-            text-align: end;
-            align-self: flex-end;
+        .join-button {
+            margin-top: 20px;
+            border-radius: 2px;
+            padding: 15px 32px;
+            font-size: 100%;
+            background-color: #454b1b;
+            color: #fafafa;
         }
-    }
-        /* Gallery */
-        #photos {
-        column-count: 3;
 
-    /* Large devices (laptops and desktops, 992px and up) */
-    @media screen and (min-width: 992px) {
-        #menu a:hover {
-            border-bottom: 1px solid #3a3a3a;
+        /* Media query: tablets and larger (768px and up) */
+        @media screen and (min-width: 768px) {
+            ...
+
+            /* Form */
+            #signup {
+                background-position: center;
+                position: relative;
+            }
+
+            #signup-form {
+                max-width: 400px;
+                position: absolute;
+                left: 10%;
+                top: 150px;
+            }
+
+            .text-input:hover {
+                border-color: #f16c6b;
+            }
+
+            .join-button:hover {
+                background-color: #fafafa;
+                color: #454b1b;
+            }
         }
-    }
+
+        /* Large devices (laptops and desktops, 992px and up) */
+        @media screen and (min-width: 992px) {
+            #menu a:hover {
+                border-bottom: 1px solid #3a3a3a;
+            }
+        }
+
         /* Gallery */
         #photos {
             column-count: 4;
 
-    @media screen and (min-width: 1200px) {
+            @media screen and (min-width: 1200px) {
 
-        /* Reasons section */
-        #benefits {
-            display: flex;
-            flex-direction: row;
-        }
+                /* Reasons section */
+                #benefits {
+                    display: flex;
+                    flex-direction: row;
+                }
 
-        #benefits>div {
-            flex: 1;
-        }
+                #benefits>div {
+                    flex: 1;
+                }
 
-        #benefits-image {
-            order: 0
-        }
+                #benefits-image {
+                    order: 0
+                }
 
-        #benefits-mental {
-            order: 1;
-        }
+                #benefits-mental {
+                    order: 1;
+                }
 
-        #benefits-mental>div {
-            align-self: flex-start;
-        }
+                #benefits-mental>div {
+                    align-self: flex-start;
+                }
 
-        #benefits-physical>div {
-            align-self: flex-end;
-        }
-    }
+                #benefits-physical>div {
+                    align-self: flex-end;
+                }
+            }
